<resources>
    <string name="app_name">Image Wall</string>
    <string name="wall_activity_name">@string/app_name</string>
    <string name="post_activity_name">Post Photo</string>
    <string name="profile_activity_name">Profile</string>
    <string name="edit_profile_activity_name">Edit Profile</string>
    <string name="login_activity_name">Login</string>
    <string name="register_activity_name">Register</string>
    <string name="details_activity_name">Details</string>
    <string name="login_button">LOGIN</string>
    <string name="login_button_google_letter">G</string>
    <string name="login_button_google">LOGIN WITH GOOGLE</string>
    <string name="login_button_facebook_letter">F</string>
    <string name="login_button_facebook">LOGIN WITH FACEBOOK</string>
    <string name="forgot_password_button">Forgot password ?</string>
    <string name="create_account_button_description">Don\'t have an account?</string>
    <string name="create_account_button">Create one now!</string>
    <string name="content_description_divider">Divider</string>
    <string name="content_description_login_space">Space</string>
    <string name="divider_text_or">or</string>
    <string name="invalid_credentials_error_message">Username or password is
        incorrect.</string>
    <string name="email_is_not_verified">Email is not verified.</string>
    <string name="register_button">REGISTER</string>
    <string name="check_mark_content_description">Input meets minimum requirements.</string>
    <string name="countries_dialog_title">Select your country</string>
    <string name="countries_dialog_positive_button">ACCEPT</string>
    <string name="dialog_registration_progress_title">Registering</string>
    <string name="dialog_registration_progress_content">Please wait …</string>
    <string name="dialog_registration_success_title">Success</string>
    <string name="dialog_registration_positive_button">OK</string>
    <string name="dialog_registration_content">Please check your inbox at <u>%1$s</u> to activate your account.</string>
    <string name="add_photo_post_button">POST</string>
    <string name="content_description_selected_photo">Selected Photo</string>
    <string name="request_permission_snack_bar">Camera and storage permissions are
        needed.</string>
    <string name="profile_photo_name">John Doe</string>
    <string name="profile_country">United States</string>
    <string name="profile_website">www.youtube.com</string>
    <string name="profile_post_num">256</string>
    <string name="profile_followers_num">26K</string>
    <string name="profile_following_num">152</string>
    <string name="profile_post_title">posts</string>
    <string name="profile_followers_title">followers</string>
    <string name="profile_following_title">following</string>
    <string name="edit_profile_public">PUBLIC</string>
    <string name="edit_profile_name">YOUR NAME</string>
    <string name="edit_profile_username">USERNAME</string>
    <string name="edit_profile_website">WEBSITE</string>
    <string name="edit_profile_country">COUNTRY</string>
    <string name="edit_profile_private">PRIVATE</string>
    <string name="edit_profile_email">EMAIL</string>
    <string name="edit_profile_password">PASSWORD</string>
    <string name="edit_profile_password_circle_bullet">
        \u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
    <string name="edit_profile_password_change_dialog_title">Change your password</string>
    <string name="edit_profile_password_change_positive_button">SAVE</string>
    <string name="edit_profile_password_change_dialog_negative_button">DISCARD</string>
    <string name="save_updated_profile_information">Save updated menu information.</string>
    <string name="snack_bar_successfully_updated_profile">Successfully update profile.</string>
    <string name="snack_bar_successfully_update_password">Password successfully updated.</string>
    <string name="snack_bar_failed_update_password">Password update failed.</string>
    <string name="edit_profile_update_dialog_title">Updating Details</string>
    <string name="edit_profile_update_dialog_content">Please Wait …</string>
    <string name="snack_bar_email_already_in_used">Email address is already in used"</string>
    <string name="snack_bar_username_already_in_used">Email address is already in used"</string>
    <string name="dialog_forgot_password_title">Password Recovery</string>
    <string name="dialog_forgot_password_content">Instructions to recover your password will be
        sent to this email.</string>
    <string name="dialog_edit_text_forgot_password_hint">Email address used to register.</string>
    <string name="dialog_edit_text_forgot_password_prefill">""</string>
    <string name="dialog_forgot_password_positive_button">SEND</string>
    <string name="dialog_forgot_password_negative_button">CANCEL</string>
    <string name="dialog_forgot_password_invalid_email">Invalid email, please try again
        .</string>
    <string name="edit_text_email_hint">E-mail</string>
    <string name="edit_text_username_hint">Username</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="edit_text_password_retype_hint">Re-type password</string>
    <string name="edit_text_old_password_hint_dialog">Old password</string>
    <string name="edit_text_new_password_hint_dialog">New password</string>
    <string name="edit_text_password_retype_hint_dialog">Re-type new password</string>
    <string name="edit_text_name_hint">Enter your first and last name</string>
    <string name="edit_text_website_hint">Enter your website</string>
    <string name="edit_text_add_title_hint">Enter a title …</string>
    <string name="edit_text_add_description_hint">Enter a description …</string>
    <string name="fake_edit_text_btn_country_hint">Country</string>
    <string name="fake_edit_text_add_photo_hint">Add Photo</string>
    <string name="add_post_button">Add Post</string>
    <string name="add_image_from_camera_button">Add Image From Camera</string>
    <string name="add_image_from_gallery_button">Add Image From Gallery</string>
    <string name="create_an_account">Create An Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_profile">Edit Profile</string>
    <string name="drawer_post">Post</string>
    <string name="drawer_about">About</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="sample_name">John Doe</string>
    <string name="sample_email">johndoe@example.com</string>
    <string name="content_description_profile_image">Profile Image</string>
    <string name="content_description_card_image">Card Image</string>
    <string name="content_description_card_favourite_button">Card Favourite Image</string>
    <string name="content_description_card_share_button">Card Share Image</string>
    <string name="content_description_card_likes_images">Card Number of Likes</string>
    <string name="dummy_text_title">Dummy Text</string>
    <string name="dummy_likes">115K</string>
    <string name="dummy_text_desc">
        Integer sit amet interdum massa. Nunc sit amet blandit augue.
        Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut scelerisque
        sollicitudin consequat. Mauris bibendum enim at risus lobortis, id molestie
        mi dapibus.
    </string>
    <string name="error_empty">This field cannot be empty.</string>
    <string name="error_email">Invalid email address.</string>
    <string name="error_password">Password needs to be at least 8 characters.</string>
    <string name="error_retype_password">Passwords do not match.</string>
    <string name="error_website">Invalid web address.</string>
    <string name="error_auth_failed">Current password was incorrect.</string>
    <string name="error_password_does_not_meet_criteria">Password requires at least 2
        numbers and be at least 8 characters in length.</string>
    <string name="error_creating_account">Error creating account. Please try again later.</string>
    <string name="error_creating_account_email_already_in_used">Email is already in used.</string>
</resources>