<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menuActions"
        android:checkableBehavior="single">

        <item
            android:id="@+id/post"
            android:icon="@drawable/ic_camera_alt_white_24dp"
            android:title="@string/drawer_post" />

        <item
            android:id="@+id/editProfile"
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="@string/drawer_profile" />

    </group>

    <group
        android:id="@+id/menuSession"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/drawer_settings" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/drawer_about" />

        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/drawer_sign_out"/>

    </group>

</menu>