<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/content_description_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_photo_drawer"/>

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_photo_name"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/profilePhoto"
            app:layout_constraintStart_toStartOf="@+id/profilePhoto"
            app:layout_constraintTop_toBottomOf="@+id/profilePhoto"/>


        <TextView
            android:id="@+id/profileCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/profile_country"
            android:textColor="@color/editTextText"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileName"/>

        <TextView
            android:id="@+id/profileWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/profile_website"
            android:textColor="@color/editTextText"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileCountry"/>

        <TextView
            android:id="@+id/profilePostNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/profile_post_num"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/profilePostTitle"
            app:layout_constraintStart_toStartOf="@+id/profilePostTitle"
            app:layout_constraintTop_toBottomOf="@+id/profileWebsite"/>

        <TextView
            android:id="@+id/profileFollowersNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/profile_followers_num"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/profilePhoto"
            app:layout_constraintStart_toStartOf="@+id/profilePhoto"
            app:layout_constraintTop_toBottomOf="@+id/profileWebsite"/>

        <TextView
            android:id="@+id/profileFollowingNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/profile_following_num"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/profileFollowingTitle"
            app:layout_constraintStart_toStartOf="@+id/profileFollowingTitle"
            app:layout_constraintTop_toBottomOf="@+id/profileWebsite"/>

        <TextView
            android:id="@+id/profilePostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_post_title"
            android:textColor="@color/editTextText"
            app:layout_constraintEnd_toStartOf="@+id/profileFollowersTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePostNum"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/profileFollowersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_followers_title"
            android:textColor="@color/editTextText"
            app:layout_constraintEnd_toEndOf="@+id/profilePhoto"
            app:layout_constraintStart_toStartOf="@+id/profilePhoto"
            app:layout_constraintTop_toBottomOf="@+id/profileFollowersNum"/>

        <TextView
            android:id="@+id/profileFollowingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_following_title"
            android:textColor="@color/editTextText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileFollowersTitle"
            app:layout_constraintTop_toBottomOf="@+id/profileFollowingNum"
            android:layout_marginLeft="8dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/profileRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/profileFollowersTitle"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>